--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <head>
         <meta charset="UTF-8">
         <title> Odin Recipes </title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
+    <div class="heading background">
         <h1>Odin Recipes</h1>
+    
     <ul>
        <li><a href="recipes/burrito.html">Burrito</a></li> 
        <li><a href="recipes/chickenparma.html">Chicken Parmagiana</a></li> 
        <li><a href="recipes/steakdinner.html">Steak Dinner</a></li> 
     </ul>
     </body>
-
+</div>
 </html>
