Changed fonts, background and heading colours

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     </head>
 
     <body>
-    <div class="heading background">
+    <div class="green heading">
         <h1>Odin Recipes</h1>
-    
     <ul>
        <li><a href="recipes/burrito.html">Burrito</a></li> 
        <li><a href="recipes/chickenparma.html">Chicken Parmagiana</a></li> 
